# hubpower

./: .anjuta_sym_db.db  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  hubpower.c
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.1  requests  traces.0  traces.1
debian/: changelog  control
src/: Makefile.am  Makefile.in  main.c  main.c~
